--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@navikt/ds-css": "^7.14.3",
+    "@navikt/ds-react": "^7.14.3",
+    "@navikt/nav-dekoratoren-moduler": "^3.2.2",
     "@navikt/next-logger": "^2.0.0",
     "next": "15.1.7",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "pino-roll": "^3.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
