--- a/nais/envs/.env.dev
+++ b/nais/envs/.env.dev
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_RUNTIME_ENVIRONMENT=dev
 NEXT_PUBLIC_TELEMETRY_URL=https://telemetry.ekstern.dev.nav.no/collect
+NEXT_PUBLIC_DINE_SYKMELDTE_URL=https://www.ekstern.dev.nav.no/arbeidsgiver/sykmeldte
+NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.intern.dev.nav.no/minside/
+NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.intern.dev.nav.no/min-side-arbeidsgiver/
+NEXT_PUBLIC_ASSET_PREFIX=https://cdn.nav.no/team-esyfo/oppfolgingsplan
