--- a/nais/envs/.env.prod
+++ b/nais/envs/.env.prod
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_RUNTIME_ENVIRONMENT=prod
 NEXT_PUBLIC_TELEMETRY_URL=https://telemetry.nav.no/collect
+NEXT_PUBLIC_DINE_SYKMELDTE_URL=https://www.nav.no/arbeidsgiver/sykmeldte
+NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.nav.no/minside/
+NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.nav.no/min-side-arbeidsgiver/
+NEXT_PUBLIC_ASSET_PREFIX=https://cdn.nav.no/team-esyfo/oppfolgingsplan
