--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grafana/faro-web-sdk": "^1.14.1",
+    "@grafana/faro-web-tracing": "^1.14.1",
     "@navikt/ds-css": "^7.14.3",
     "@navikt/ds-react": "^7.14.3",
     "@navikt/nav-dekoratoren-moduler": "^3.2.2",
     "@navikt/next-logger": "^2.0.0",
+    "@navikt/oasis": "^3.7.0",
     "next": "15.1.7",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
