--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@navikt/nav-dekoratoren-moduler": "^3.2.2",
     "@navikt/next-logger": "^2.0.0",
     "@navikt/oasis": "^3.7.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "pino-roll": "^3.0.0",
