--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@grafana/faro-web-tracing": "^1.14.1",
     "@navikt/ds-css": "^7.18.0",
     "@navikt/ds-react": "^7.18.0",
+    "@navikt/dinesykmeldte-sidemeny": "^7.0.1",
     "@navikt/nav-dekoratoren-moduler": "^3.2.2",
     "@navikt/next-logger": "^2.1.0",
     "@navikt/oasis": "^3.7.0",
