--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.14.1",
     "@grafana/faro-web-tracing": "^1.14.1",
+    "@navikt/dinesykmeldte-sidemeny": "^7.0.1",
     "@navikt/ds-css": "^7.14.3",
     "@navikt/ds-react": "^7.14.3",
     "@navikt/nav-dekoratoren-moduler": "^3.2.2",
