--- a/package.json
+++ b/package.json
@@ -27,16 +27,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
     "prettier": "^3.5.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.0",
     "typescript": "^5"
   }
 }
