--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.14.1",
     "@grafana/faro-web-tracing": "^1.14.1",
-    "@navikt/ds-css": "^7.14.3",
-    "@navikt/ds-react": "^7.14.3",
+    "@navikt/ds-css": "^7.18.0",
+    "@navikt/ds-react": "^7.18.0",
     "@navikt/nav-dekoratoren-moduler": "^3.2.2",
-    "@navikt/next-logger": "^2.0.0",
+    "@navikt/next-logger": "^2.1.0",
     "@navikt/oasis": "^3.7.0",
     "next": "^15.2.4",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "pino-roll": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "pino-roll": "^3.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "@types/node": "^22.13.17",
+    "@types/react": "^19.0.13",
+    "@types/react-dom": "^19.0.5",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.0",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   }
 }
