--- a/nais/envs/.env.demo
+++ b/nais/envs/.env.demo
@@ -4,3 +4,12 @@ NEXT_PUBLIC_DINE_SYKMELDTE_URL=https://dinesykmeldte.ekstern.dev.nav.no/arbeidsg
 NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.intern.dev.nav.no/minside/
 NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.ansatt.dev.nav.no/min-side-arbeidsgiver/
 NEXT_PUBLIC_ASSET_PREFIX=https://cdn.nav.no/team-esyfo/oppfolgingsplan
+FLEXJAR_HOST="dummy-value"
+FLEXJAR_BACKEND_CLIENT_ID="dummy-value"
+DINESYKMELDTE_BACKEND_HOST="dummy-value"
+DINESYKMELDTE_BACKEND_CLIENT_ID="dummy-value"
+TOKEN_X_WELL_KNOWN_URL="dummy-value"
+TOKEN_X_CLIENT_ID="dummy-value"
+TOKEN_X_PRIVATE_JWK="dummy-value"
+IDPORTEN_WELL_KNOWN_URL="dummy-value"
+IDPORTEN_CLIENT_ID="dummy-value"
