Add logging to grafana

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -24,6 +24,10 @@ spec:
         - /syk/oppfolgingsplan/api/isAlive
         - /syk/oppfolgingsplan/api/isReady
   observability:
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
     autoInstrumentation:
       enabled: true
       runtime: nodejs
