--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -35,6 +35,10 @@ spec:
     periodSeconds: 5
     timeout: 5
   observability:
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
     autoInstrumentation:
       enabled: true
       runtime: nodejs
