change application name

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -12,5 +12,5 @@ jobs:
       packages: write
     secrets: inherit
     with:
-      app: oppfolgingsplan
+      app: syfo-oppfolgingsplan-frontend
       base-path: /syk/oppfolgingsplan
