--- a/.github/workflows/upload-public.yaml
+++ b/.github/workflows/upload-public.yaml
@@ -18,6 +18,6 @@ jobs:
         with:
           team: team-esyfo
           source: ./public
-          destination: '/oppfolgingsplan'
+          destination: '/syfo-oppfolgingsplan-frontend'
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
