--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: 'nais.io/v1alpha1'
 kind: 'Application'
 metadata:
-  name: oppfolgingsplan
+  name: syfo-oppfolgingsplan-frontend
   namespace: team-esyfo
   labels:
     team: team-esyfo
