--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oppfolgingsplan",
+  "name": "syfo-oppfolgingsplan-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
