fix missing demo env vars

--- a/nais/envs/.env.demo
+++ b/nais/envs/.env.demo
@@ -13,3 +13,5 @@ TOKEN_X_CLIENT_ID="dummy-value"
 TOKEN_X_PRIVATE_JWK="dummy-value"
 IDPORTEN_WELL_KNOWN_URL="dummy-value"
 IDPORTEN_CLIENT_ID="dummy-value"
+SYFO_OPPFOLGINGSPLAN_BACKEND_HOST="dummy-value"
+SYFO_OPPFOLGINGSPLAN_BACKEND_CLIENT_ID="dummy-value"
