Remove deprecated next lint command, switch to eslint
https://nextjs.org/blog/next-15-5#next-lint-deprecation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.19.0",
