--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.19.0",
     "@grafana/faro-web-tracing": "^1.19.0",
+    "@navikt/dinesykmeldte-sidemeny": "^7.0.6",
     "@navikt/ds-css": "^7.32.1",
     "@navikt/ds-react": "^7.32.1",
-    "@navikt/dinesykmeldte-sidemeny": "^7.0.6",
+    "@navikt/ds-tailwind": "^7.32.2",
     "@navikt/nav-dekoratoren-moduler": "^3.4.0",
     "@navikt/next-logger": "^2.1.0",
-    "@tanstack/react-form": "^1.23.7",
     "@navikt/oasis": "^3.8.0",
+    "@tanstack/react-form": "^1.23.7",
     "next": "^15.5.5",
     "pino": "^9.13.0",
     "pino-pretty": "^13.1.2",
     "pino-roll": "^3.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "zod": "^3.25.73"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -38,6 +39,6 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5.9.3"
+    "typescript": "^5.8.3"
   }
 }
