Use Aksel darkside (#357)
And add aksel-icons

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.19.0",
     "@grafana/faro-web-tracing": "^1.19.0",
+    "@navikt/aksel-icons": "^7.32.2",
+    "@navikt/dinesykmeldte-sidemeny": "^7.0.6",
     "@navikt/ds-css": "^7.32.1",
     "@navikt/ds-react": "^7.32.1",
-    "@navikt/dinesykmeldte-sidemeny": "^7.0.6",
+    "@navikt/ds-tailwind": "^7.32.2",
     "@navikt/nav-dekoratoren-moduler": "^3.4.0",
     "@navikt/next-logger": "^2.1.0",
-    "@tanstack/react-form": "^1.23.7",
     "@navikt/oasis": "^3.8.0",
+    "@tanstack/react-form": "^1.23.7",
     "next": "^15.5.5",
     "pino": "^9.13.0",
     "pino-pretty": "^13.1.2",
