--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,13 @@
 {
-  "trailingComma": "es5",
   "plugins": [
+    "prettier-plugin-tailwindcss",
     "@trivago/prettier-plugin-sort-imports"
   ],
   "importOrder": [
     "^react$",
     "^next",
     "<THIRD_PARTY_MODULES>",
+    "@navikt/(.*)$",
     "^@/(.*)$",
     "^[./]"
   ],
