Use dayjs for date and timezone handling
Use dayjs for date handling in a centralized manner, including standardizing on a timezone and locale.

Let date values flow through app as iso date strings until the point where they formatted for display. Iso date strings from backend are no longer transformed to Date objects in the zod response schemas.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@navikt/next-logger": "^4.4.1",
     "@navikt/oasis": "^3.8.0",
     "@tanstack/react-form": "^1.27.0",
+    "dayjs": "^1.11.19",
     "next": "^16.0.7",
     "pino": "^9.13.0",
     "pino-pretty": "^13.1.3",
