--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@grafana/faro-web-sdk": "^1.19.0",
     "@grafana/faro-web-tracing": "^1.19.0",
     "@navikt/aksel-icons": "^7.35.2",
+    "@navikt/analytics-types": "^0.0.6",
     "@navikt/dinesykmeldte-sidemeny": "^7.0.8",
     "@navikt/ds-css": "^7.35.2",
     "@navikt/ds-react": "^7.35.2",
