Migrate to aksel v8, and swap Flexjar with Lumi

--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@grafana/faro-web-sdk": "^1.19.0",
     "@grafana/faro-web-tracing": "^1.19.0",
-    "@navikt/aksel-icons": "^7.39.0",
+    "@navikt/aksel-icons": "^8.0.1",
     "@navikt/analytics-types": "^0.0.6",
-    "@navikt/dinesykmeldte-sidemeny": "^7.0.21",
-    "@navikt/ds-css": "^7.39.0",
-    "@navikt/ds-react": "^7.39.0",
-    "@navikt/ds-tailwind": "^7.39.0",
-    "@navikt/flexjar-widget": "^0.2.14",
+    "@navikt/dinesykmeldte-sidemeny": "^8.0.0",
+    "@navikt/ds-css": "^8.0.0",
+    "@navikt/ds-react": "^8.0.0",
+    "@navikt/ds-tailwind": "^8.0.1",
+    "@navikt/lumi-survey": "^0.0.5",
     "@navikt/nav-dekoratoren-moduler": "^3.6.1",
     "@navikt/next-logger": "^4.4.5",
     "@navikt/oasis": "^3.8.0",
