--- a/nais/envs/.env.demo
+++ b/nais/envs/.env.demo
@@ -5,8 +5,8 @@ NEXT_PUBLIC_DITT_SYKEFRAVAER_URL=https://demo.ekstern.dev.nav.no/syk/sykefravaer
 NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.intern.dev.nav.no/minside/
 NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.ansatt.dev.nav.no/min-side-arbeidsgiver/
 NEXT_PUBLIC_ASSET_PREFIX=https://cdn.nav.no/team-esyfo/syfo-oppfolgingsplan-frontend
-FLEXJAR_HOST="dummy-value"
-FLEXJAR_BACKEND_CLIENT_ID="dummy-value"
+LUMI_API_HOST="dummy-value"
+LUMI_API_CLIENT_ID="dummy-value"
 DINESYKMELDTE_BACKEND_HOST="dummy-value"
 DINESYKMELDTE_BACKEND_CLIENT_ID="dummy-value"
 TOKEN_X_WELL_KNOWN_URL="dummy-value"
