--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -55,10 +55,10 @@ spec:
   ingresses:
     - 'https://www.ekstern.dev.nav.no/syk/oppfolgingsplan'
   env:
-    - name: FLEXJAR_HOST
-      value: "http://flexjar-backend.flex"
-    - name: FLEXJAR_BACKEND_CLIENT_ID
-      value: dev-gcp:flex:flexjar-backend
+    - name: LUMI_API_HOST
+      value: "http://lumi-api"
+    - name: LUMI_API_CLIENT_ID
+      value: dev-gcp:team-esyfo:lumi-api
     - name: DINESYKMELDTE_BACKEND_CLIENT_ID
       value: "dev-gcp:team-esyfo:dinesykmeldte-backend"
     - name: SYFO_OPPFOLGINGSPLAN_BACKEND_HOST
@@ -70,7 +70,6 @@ spec:
       rules:
         - application: syfo-oppfolgingsplan-backend
         - application: dinesykmeldte-backend
-        - application: flexjar-backend
-          namespace: flex
+        - application: lumi-api
         - application: nav-dekoratoren
           namespace: personbruker
