--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_BASE_PATH="/syk/oppfolgingsplan"
 NEXT_PUBLIC_DINE_SYKMELDTE_URL=https://www.nav.no/arbeidsgiver/sykmeldte
 NEXT_PUBLIC_DITT_SYKEFRAVAER_URL=https://www.nav.no/syk/sykefravaer
+NEXT_PUBLIC_GAMMEL_OPPFOLGINGSPLAN_URL=https://www.nav.no/syk/oppfolgingsplaner
 NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.nav.no/minside/
 NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.nav.no/min-side-arbeidsgiver/
 NEXT_PUBLIC_RUNTIME_ENVIRONMENT=prod
