--- a/nais/envs/.env.dev
+++ b/nais/envs/.env.dev
@@ -2,6 +2,7 @@ NEXT_PUBLIC_RUNTIME_ENVIRONMENT=dev
 NEXT_PUBLIC_TELEMETRY_URL=https://telemetry.ekstern.dev.nav.no/collect
 NEXT_PUBLIC_DINE_SYKMELDTE_URL=https://www.ekstern.dev.nav.no/arbeidsgiver/sykmeldte
 NEXT_PUBLIC_DITT_SYKEFRAVAER_URL=https://www.ekstern.dev.nav.no/syk/sykefravaer
+NEXT_PUBLIC_GAMMEL_OPPFOLGINGSPLAN_URL=https://www.ekstern.dev.nav.no/syk/oppfolgingsplaner
 NEXT_PUBLIC_MIN_SIDE_ROOT=https://www.intern.dev.nav.no/minside/
 NEXT_PUBLIC_MIN_SIDE_ARBEIDSGIVER_URL=https://arbeidsgiver.intern.dev.nav.no/min-side-arbeidsgiver/
 NEXT_PUBLIC_ASSET_PREFIX=https://cdn.nav.no/team-esyfo/syfo-oppfolgingsplan-frontend
