--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@navikt/oasis": "^4.1.4",
 		"@tanstack/react-form": "^1.28.0",
 		"dayjs": "^1.11.19",
+		"nanoid": "^5.1.6",
 		"next": "^16.1.6",
 		"pino": "^10.3.1",
 		"pino-pretty": "^13.1.3",
