--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest",
     "lint": "biome check",
     "lint:fix": "biome check --write",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format": "biome format --write .",
+    "format:check": "biome format --check .",
     "prepare": "husky"
   },
   "dependencies": {
@@ -39,28 +39,21 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.14",
-    "@eslint/eslintrc": "^3.3.3",
     "@next/env": "^16.1.4",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "@types/node": "^25.2.2",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
     "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "16.1.6",
-    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "jsdom": "^28.0.0",
     "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
-    "prettier": "^3.8.1",
-    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^6.1.0",
@@ -72,8 +65,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "biome check --write",
+      "biome format --write"
     ]
   }
 }
