--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "biome check",
     "lint:fix": "biome check --write",
     "format": "biome format --write .",
-    "prepare": "husky"
+    "prepare": "lefthook install --reset-hooks-path"
   },
   "dependencies": {
     "@grafana/faro-web-sdk": "^2.2.3",
@@ -49,9 +49,8 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
     "babel-plugin-react-compiler": "^1.0.0",
-    "husky": "^9.1.7",
+    "lefthook": "^2.1.1",
     "jsdom": "^28.0.0",
-    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
@@ -61,11 +60,5 @@
   "overrides": {
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "biome check --write",
-      "biome format --write"
-    ]
   }
 }
