--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format .",
+    "format:fix": "biome format --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "test": "vitest",
-    "lint": "biome check",
-    "lint:fix": "biome check --write",
-    "format": "biome format --write .",
     "prepare": "lefthook install --reset-hooks-path"
   },
   "dependencies": {
